tests/ui/jsgstruct_on_enum.stderr
error: JsgStruct only applies to structs, not enums
 --> tests/ui/jsgstruct_on_enum.rs:3:14
  |
3 |     #[derive(JsgStruct)]
  |              ^^^^^^^^^