tests/ui/jsgstruct_on_enum.rs
#[cxx::bridge]
mod ffi {
    #[derive(JsgStruct)]
    enum MyEnum {
        Variant1,
        Variant2,
    }
}

fn main() {}